sql/sql_base.cc
@@ -4656,6 +4656,7 @@ bool setup_tables_and_check_access(THD *thd,
   TABLE_LIST *leaves_tmp = NULL;
   bool first_table= true;
 
+  thd->leaf_count= 0;
   if (setup_tables (thd, context, from_clause, tables, conds, 
                     &leaves_tmp, select_insert))
     return TRUE;
@@ -4673,6 +4674,7 @@ bool setup_tables_and_check_access(THD *thd,
       return TRUE;
     }
     first_table= false;
+    thd->leaf_count++;
   }
   return FALSE;
 }
